--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "^11.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-redux": "^7.2.4"
+    "react-redux": "^7.2.4",
+    "styled-components": "^5.3.0"
   },
   "devDependencies": {
     "eslint": "7.32.0",
