--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
+    "sass": "^1.37.5",
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
